--- a/themes/uno/assets/css/asciidoctor-foundation.css
+++ b/themes/uno/assets/css/asciidoctor-foundation.css
@@ -1,7 +1,7 @@
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ========================================================================== HTML5 display definitions ========================================================================== */
 /** Correct `block` display not defined in IE 8/9. */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
+/*article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }*/
 
 /** Correct `inline-block` display not defined in IE 8/9. */
 audio, canvas, video { display: inline-block; }
