--- a/themes/uno/assets/scss/global.scss
+++ b/themes/uno/assets/scss/global.scss
@@ -250,6 +250,7 @@ pre {
 
 .footer {
   display: block;
+  margin: 2em 0 0 0;
   padding: 2em 0 0 0;
   border-top: 2px solid $gray-light;
   font-size: .7em;
