--- a/themes/uno/default.hbs
+++ b/themes/uno/default.hbs
@@ -63,6 +63,7 @@
 
     {{! The main JavaScript file for Casper }}
 	<script type='text/javascript' src="{{asset 'highlighter/prettify.js'}}"></script>
+	<script type='text/javascript' src="{{asset 'highlighter/lang-glsl.js'}}"></script>
     <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
     
     {{#if @blog.googleAnalytics}}
